--- a/core/libs/video/qtav/examples/player/theme/theme.qrc
+++ b/core/libs/video/qtav/examples/player/theme/theme.qrc
@@ -1,4 +1,7 @@
 <RCC>
+    <qresource prefix="/">
+        <file>QtAV.svg</file>
+    </qresource>
     <qresource prefix="/theme">
         <file>default/backward.svg</file>
         <file>default/forward.svg</file>
