--- a/core/dplugins/generic/tools/htmlgallery/themes/html5responsive/resources/css/photoswipe.css
+++ b/core/dplugins/generic/tools/htmlgallery/themes/html5responsive/resources/css/photoswipe.css
@@ -1,5 +1,6 @@
 /*
-! PhotoSwipe main CSS by Dmitry Semenov | photoswipe.com | MIT license
+! PhotoSwipe main CSS by Dmitry Semenov | photoswipe.com | SPDX-License-Identifier: MIT
+
 
 This CSS file is taken directly, unmodified (apart from this comment edit), from
 the PhotoSwipe program made available at:
@@ -7,9 +8,6 @@ the PhotoSwipe program made available at:
 https://photoswipe.com/
 
 The original work is Copyright © 2019 Dmitry Semenov.
-
-This CSS file is being redistributed under the GNU GPLv3, as described in the
-LICENCE.txt file found in the html5responsive directory of this software work.
 */
 
 /*
